--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,28 +1,27 @@
-.cardsPage {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fill, 285px);
-  gap: 40px;
-  padding: 40px;
+.homePageContainer{
+  padding-top: 130px;
 }
 
-@media (max-width: 560px) {
-  .cardsPage{
-      grid-template-columns: 100%;
-  }
+.cardsPage {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 40px;
 }
 
 .card {
   border-radius: 10px;
   margin: 10px;
+  margin-left: 38px;
+  margin-right: 38px;
   width: 225px;
   height: 300px;
   position: relative;
   background: #f5f5f5;
-  transition: box-shadow .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: box-shadow 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.cardLink{
+.cardLink {
   color: black;
 }
 
@@ -31,7 +30,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: #FFDE00;
+  background-color: #ffde00;
   background-position: top center;
   background-size: 86% 86%;
   background-repeat: no-repeat;
@@ -42,6 +41,7 @@
   width: 100%;
   bottom: 0;
   padding: 1rem;
+  padding-bottom: .5rem;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
@@ -52,7 +52,7 @@
   transform: translateX(-20%);
   width: 4.7em;
   height: 2.2em;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .cardSvg {
@@ -61,7 +61,7 @@
   height: var(--size);
 }
 
-.textName, .textTypes {
+.textName{
   margin: 0;
   line-height: 140%;
 }
@@ -70,21 +70,22 @@
   color: white;
   border-radius: 0 10px 10px 0;
   position: absolute;
-  left: 0;
+  left: -5px;
   padding-left: 40px;
   padding-right: 12px;
-  padding-top: .8px;
+  padding-top: 0.8px;
   bottom: 37px;
   font-weight: 900;
   font-size: 18px;
-  background-color: #3B4CCA;
-  transition: .15s;
+  background-color: #3b4cca;
+  transition: 0.15s;
 }
 
 .textTypes {
-  color: rgba(0, 0, 0, 0.838);
-  font-weight: 500;
-  font-size: 16px;
+  margin: 0 10px 0 0;
+  font-weight: 700;
+  font-size: 18px;
+  text-shadow: 0px 0px 3px white;
 }
 
 .textName:hover {
@@ -92,7 +93,7 @@
 }
 
 .card:hover {
-  box-shadow: 0 10px 20px 4px rgba(35, 35, 35, .1);
+  box-shadow: 0 10px 20px 4px rgba(35, 35, 35, 0.1);
 }
 
 .card:hover .cardIcon {
@@ -100,17 +101,13 @@
   transform: translateX(20%);
 }
 
-.loadingContainer {
-  padding-top: 130px;
-}
-
-.pokemonsNotFound{
+.pokemonsNotFound {
   padding-top: 115px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: myAnim 1s ease 0s 1 normal forwards; 
+  animation: myAnim 1s ease 0s 1 normal forwards;
 }
 
 .notFoundImage {
@@ -118,109 +115,20 @@
   max-height: 220px;
 }
 
-.pokeball {
-  box-sizing: border-box;
-  --pokeball-size: 200px;
-  --pokeball-inner-size: 60px;
-  --pokeball-border-size: 8px;
-
-  --before-diameter: var(--pokeball-inner-size);
-  --after-diameter: calc(var(--before-diameter) - (var(--pokeball-border-size)) * 3);
-
-  border: var(--pokeball-border-size) solid #262122;
-  width: var(--pokeball-size);
-  height: var(--pokeball-size);
-  border-radius: 100%;
-  margin: 0 auto;
-  position: relative;
-
-  
-  background: linear-gradient(
-    150deg,
-    #BA0C2F 0%,
-    #BA0C2F 44%,
-    #262122 44%,
-    #262122 56%,
-    #fff 56%,
-    #fff 100%
-  );
-}
-
-.pokeball::before, .pokeball::after {
-  content: " ";
-  border-radius: 100%;
-  display: block;
-  position: absolute;
-}
-
-.pokeball::before {
-  width: var(--before-diameter);
-  height: var(--before-diameter);
-  top: calc(50% - var(--before-diameter) / 2);
-  left: calc(50% - var(--before-diameter) / 2);
-  background: #262122;
-}
-
-.pokeball::after {
-  width: var(--after-diameter);
-  height: var(--after-diameter);
-  top: calc(50% - ((var(--after-diameter) / 2) + var(--pokeball-border-size)));
-  left: calc(50% - ((var(--after-diameter) / 2) + var(--pokeball-border-size)));
-  background: #fff;
-  border: solid var(--pokeball-border-size) #262122;
-}
-
-.pokeball_animated {
-  animation-duration: 2s;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-name: rotate;
-}
-@keyframes rotate {
-	0% {
-		transform: rotate(0);
-	}
-
-	100% {
-		transform: rotate(360deg);
-	}
-}
-
-@keyframes shake {
-  from {
-    transform: none;
-  }
-
-  20% {
-    transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg);
-  }
-
-  40% {
-    transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 5deg);
-  }
-
-  50% {
-    transform: translate3d(-10%, 0, 0) rotate3d(0, 0, 1, -10deg);
-  }
-
-  60% {
-    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
-  }
-
-  to {
-    transform: none;
-  }
-}
-
 @keyframes myAnim {
-	0% {
-		opacity: 0;
-		transform: scale(0.6);
-	}
+  0% {
+    opacity: 0;
+    transform: scale(0.6);
+  }
 
-	100% {
-		opacity: 1;
-		transform: scale(1);
-	}
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.typesContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
