--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -1,10 +1,58 @@
-.paginationNav{
+.paginationNav {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: flex-start;
   height: 80px;
 }
 
-.paginationLink{
-  margin: 8px;
+.LeftArrowIcon {
+  padding: 0;
+  background: none;
+  border: none;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: .25s;
+}
+
+.LeftArrowIcon:disabled {
+  opacity: 0;
+  cursor: default;
+}
+
+.LeftArrowIcon img {
+  width: 100%;
+  height: 100%;
+}
+
+.RightArrowIcon {
+  padding: 0;
+  background: none;
+  border: none;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: .25s;
+}
+
+.RightArrowIcon:disabled {
+  opacity: 0;
+  cursor: default;
+}
+
+.RightArrowIcon img {
+  width: 100%;
+  height: 100%;
+}
+
+.currentPage {
+  margin: 0 10px 0 11px;
+  font-family: "Gill Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.15em;
 }
