Added minor changes

--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -132,3 +132,13 @@
   flex-direction: row;
   justify-content: flex-start;
 }
+
+.notFoundText {
+  font-family: "Gill Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  color: black;
+}
